--- a/index.html
+++ b/index.html
@@ -26,8 +26,22 @@
             </ul>
         </nav>
         <ul class="list">
-            <li class="contact-linst-item"><a class="mail-link-active" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contact-list-item"><a class="tel-link" href="tel:0961111111">+38 096 111 11 11</a></li>
+            <li class="contact-list-item">
+                <a class="mail-link-active" href="mailto:info@devstudio.com">
+                    <svg class="contact-icon" width="16" height="12">
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com
+                </a>
+            </li>
+            <li class="contact-list-item">
+                <a class="tel-link" href="tel:0961111111">
+                    <svg class="contact-icon" width="16" height="12">
+                     <use href="./images/symbol-defs.svg#icon-phone"></use> 
+                        </svg>
+                    +38 096 111 11 11
+                </a>
+            </li>
         </ul>
         </div>
     </header>
@@ -45,18 +59,38 @@
             <h2 hidden>Преимущества</h2>
             <ul class="advantage-list">
                 <li class="advantage">
+                    <div class="advantage-icon container">
+                        <svg class="advantage-icon" width="70" height="70">
+                        <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3 class="advantage-title">Внимание к деталям</h3>
                     <p class="content">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="advantage">
+                    <div class="advantage-icon container">
+                        <svg class="advantage-icon" width="70" height="70">
+                            <use href="./images/symbol-defs.svg#icon-clock"></use>
+                        </svg>
+                    </div>
                     <h3 class="advantage-title">Пунктуальность</h3>
                     <p class="content">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="advantage">
+                    <div class="advantage-icon container">
+                        <svg class="advantage-icon" width="70" height="70">
+                            <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3 class="advantage-title">Планирование</h3>
                     <p class="content">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="advantage" >
+                    <div class="advantage-icon container">
+                        <svg class="advantage-icon" width="70" height="70">
+                            <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
                     <h3 class="advantage-title">Современные технологии</h3>
                     <p class="content">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
