--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,22 @@
         </ul>
     </nav>
         <ul class="list">
-            <li class="contact-list-item"><a class="mail-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="contact-list-item"><a class="tel-link" href="tel:0961111111">+38 096 111 11 11</a></li>
+            <li class="contact-list-item">
+                <a class="mail-link-active" href="mailto:info@devstudio.com">
+                    <svg class="contact-icon" width="16" height="12">
+                        <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com
+                </a>
+            </li>
+            <li class="contact-list-item">
+                <a class="tel-link" href="tel:0961111111">
+                    <svg class="contact-icon" width="16" height="12">
+                        <use href="./images/symbol-defs.svg#icon-phone"></use>
+                    </svg>
+                    +38 096 111 11 11
+                </a>
+            </li>
         </ul>
     </div>
 </header>
