--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </nav>
         <ul class="list">
             <li class="contact-list-item">
-                <a class="mail-link-active" href="mailto:info@devstudio.com">
+                <a class="mail-link" href="mailto:info@devstudio.com">
                     <svg class="contact-icon" width="16" height="12">
-                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                    <use href="./images/sprite.svg#icon-envelope"></use>
                     </svg>
                     info@devstudio.com
                 </a>
@@ -37,7 +37,7 @@
             <li class="contact-list-item">
                 <a class="tel-link" href="tel:0961111111">
                     <svg class="contact-icon" width="16" height="12">
-                     <use href="./images/symbol-defs.svg#icon-phone"></use> 
+                     <use href="./images/sprite.svg#icon-phone"></use> 
                         </svg>
                     +38 096 111 11 11
                 </a>
@@ -61,34 +61,34 @@
                 <li class="advantage">
                     <div class="advantage-icon-container">
                         <svg class="advantage-icon" width="70" height="70">
-                        <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                        <use href="./images/sprite.svg#icon-antenna"></use>
                         </svg>
                     </div>
                     <h3 class="advantage-title">Внимание к деталям</h3>
                     <p class="content">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li class="advantage">
-                    <div class="advantage-icon container">
+                    <div class="advantage-icon-container">
                         <svg class="advantage-icon" width="70" height="70">
-                            <use href="./images/symbol-defs.svg#icon-clock"></use>
+                            <use href="./images/sprite.svg#icon-clock"></use>
                         </svg>
                     </div>
                     <h3 class="advantage-title">Пунктуальность</h3>
                     <p class="content">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li class="advantage">
-                    <div class="advantage-icon container">
+                    <div class="advantage-icon-container">
                         <svg class="advantage-icon" width="70" height="70">
-                            <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                            <use href="./images/sprite.svg#icon-diagram"></use>
                         </svg>
                     </div>
                     <h3 class="advantage-title">Планирование</h3>
                     <p class="content">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li class="advantage" >
-                    <div class="advantage-icon container">
+                    <div class="advantage-icon-container">
                         <svg class="advantage-icon" width="70" height="70">
-                            <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                            <use href="./images/sprite.svg#icon-astronaut"></use>
                         </svg>
                     </div>
                     <h3 class="advantage-title">Современные технологии</h3>
@@ -123,32 +123,32 @@
                     <img src="./images/img4.jpg" alt="a man with glasses" width="270">
                     <div class="name"><h3 class="team-member">Игорь Демьяненко</h3></div>
                     <p class="team-member-occupation" lang="en">Product Designer</p>
-                    <ul class="team-social">
+                    <ul class="social-list">
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>    
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -158,32 +158,32 @@
                     <img src="./images/img5.jpg" alt="smiling woman with a blond hair" width="270">
                     <div class="name"><h3 class="team-member">Ольга Репина</h3></div>
                     <p class="team-member-occupation" lang="en" >Frontend Developer</p>
-                    <ul class="team-social">
+                    <ul class="social-list">
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -193,32 +193,32 @@
                     <img src="./images/img6.jpg" alt="smiling man in a white shirt" width="270">
                     <div class="name"><h3 class="team-member">Николай Тарасов</h3></div>
                     <p class="team-member-occupation" lang="en">Marketing</p>
-                    <ul class="team-social">
+                    <ul class="social-list">
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -228,32 +228,32 @@
                     <img src="./images/img7.jpg" alt="a man in a black T-shirt" width="270">
                     <div class="name"><h3 class="team-member">Михаил Ермаков</h3></div>
                     <p class="team-member-occupation" lang="en">UI Designer</p>
-                    <ul class="team-social">
+                    <ul class="social-list">
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-item">
                             <a href="" class="social-link">
                                 <svg class="social-icon" width="20" height="20">
-                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
                         </li>
@@ -263,52 +263,110 @@
             
             </div>
         </section>
+        <!--Clients-->
+        <section class="clients">
+            <div class="container">
+                <h2 class="client-section-heading">Постоянные клиенты</h2>
+                <ul class="client-list">
+                    <li class="client-item">
+                        <a class="client-link" href="">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-ya">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a class="client-link" href="">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-companytag">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a class="client-link" href="">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-company">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a class="client-link" href="">
+                            <svg class="client-icon" width="170" height="92">
+                                <use href="./images/sprite.svg#icon-foster">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a class="client-link" href="">
+                            <svg class="client-icon" width="106" height="60">
+                                <use href="./images/sprite.svg#icon-brand">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="client-item">
+                        <a class="client-link" href="">
+                            <svg class="client-icon" width="170" height="92">
+                                <use href="./images/sprite.svg#icon-comptag">
+                                </use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!--Footer-->
     <footer class="footer">
-        <div class="container">
-        <a class="footer-logo" href="" lang="en"><span class="logo-web">Web</span>Studio</a>
-        <address class="address">
-            <ul> 
+    <div class="container footer-flex">
+        <div class="footer-address-container">
+            <a class="footer-logo" href="" lang="en"><span class="logo-web">Web</span>Studio</a>
+            <address class="address">
+                <ul> 
                 <li class="footer-list"><a class="footer-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li class="footer-list"><a class="footer-contact" href="mailto:info@example.com">info@example.com</a></li>
                 <li class="footer-list"><a class="footer-contact" href="tel:0991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+                </ul>
+            </address>
         </div>
         <div class="footer-social-container">
             <p class="social-text">Присоединяйтесь</p>
-            <ul class="footer-social-link">
+            <ul class="footer-social social-list">
                 <li class="social-item">
                     <a href="" class="social-link">
                         <svg class="social-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            <use href="./images/sprite.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-item">
                     <a href="" class="social-link">
                         <svg class="social-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            <use href="./images/sprite.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-item">
                     <a href="" class="social-link">
                         <svg class="social-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            <use href="./images/sprite.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="social-item">
                     <a href="" class="social-link">
                         <svg class="social-icon" width="20" height="20">
-                            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            <use href="./images/sprite.svg#icon-linkedin"></use>
                         </svg>
                     </a>
                 </li>
             </ul>
         </div>
+    </div>
     </footer>
 </body>
 </html>
