--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,9 @@
     </nav>
         <ul class="list">
             <li class="contact-list-item">
-                <a class="mail-link-active" href="mailto:info@devstudio.com">
+                <a class="mail-link" href="mailto:info@devstudio.com">
                     <svg class="contact-icon" width="16" height="12">
-                        <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                        <use href="./images/sprite.svg#icon-envelope"></use>
                     </svg>
                     info@devstudio.com
                 </a>
@@ -37,7 +37,7 @@
             <li class="contact-list-item">
                 <a class="tel-link" href="tel:0961111111">
                     <svg class="contact-icon" width="16" height="12">
-                        <use href="./images/symbol-defs.svg#icon-phone"></use>
+                        <use href="./images/sprite.svg#icon-phone"></use>
                     </svg>
                     +38 096 111 11 11
                 </a>
@@ -146,15 +146,51 @@
     </main>
         <!--Footer-->
         <footer class="footer">
-            <div class="container">
-            <a class="footer-logo" href="" lang="en"><span class="logo-web">Web</span>Studio</a>
-            <address class="address">
-                <ul>
-                    <li class="footer-list"><a class="footer-address" href="">г. Киев, пр-т Леси Украинки, 26</a> </li>
-                    <li class="footer-list"><a class="footer-contact" href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="footer-list"><a class="footer-contact" href="tel:0991111111">+38 099 111 11 11</a> </li>
-                </ul>
-            </address>
+            <div class="container footer-flex">
+                <div class="footer-address-container">
+                    <a class="footer-logo" href="" lang="en"><span class="logo-web">Web</span>Studio</a>
+                    <address class="address">
+                        <ul>
+                            <li class="footer-list"><a class="footer-address" href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li class="footer-list"><a class="footer-contact"
+                                    href="mailto:info@example.com">info@example.com</a></li>
+                            <li class="footer-list"><a class="footer-contact" href="tel:0991111111">+38 099 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <div class="footer-social-container">
+                    <p class="social-text">Присоединяйтесь</p>
+                    <ul class="footer-social social-list">
+                        <li class="social-item">
+                            <a href="" class="social-link">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-link">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-link">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-item">
+                            <a href="" class="social-link">
+                                <svg class="social-icon" width="20" height="20">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </footer>
 </body>
