Summary(corrected mistakes)

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
     </nav>
         <ul class="list">
             <li class="contact-list-item">
-                <a class="mail-link" href="mailto:info@devstudio.com">
+                <a class="contact-link" href="mailto:info@devstudio.com">
                     <svg class="contact-icon" width="16" height="12">
                         <use href="./images/sprite.svg#icon-envelope"></use>
                     </svg>
@@ -35,7 +35,7 @@
                 </a>
             </li>
             <li class="contact-list-item">
-                <a class="tel-link" href="tel:0961111111">
+                <a class="contact-link" href="tel:0961111111">
                     <svg class="contact-icon" width="16" height="12">
                         <use href="./images/sprite.svg#icon-phone"></use>
                     </svg>
